--- a/src/app/seal-search/seal-search.component.html
+++ b/src/app/seal-search/seal-search.component.html
@@ -11,7 +11,7 @@
         </mat-list-option>
       </mat-selection-list>
       <mat-divider></mat-divider>
-      <button mat-menu-item (click)="openFormatsDialog()">Barcode formats</button>
+      <!-- <button mat-menu-item (click)="openFormatsDialog()">Barcode formats</button> -->
     </mat-menu>
   
     <header>
