--- a/src/app/seal-search/seal-search.component.html
+++ b/src/app/seal-search/seal-search.component.html
@@ -1,5 +1,5 @@
-<!-- <div class="scanner-shell" [hidden]="!hasDevices"> -->
-<div class="scanner-shell" [hidden]="false">
+ <div class="scanner-shell" [hidden]="!hasDevices"> 
+<!-- <div class="scanner-shell" [hidden]="false"> -->
     <mat-menu #appMenu="matMenu">
       <mat-selection-list>
         <mat-list-option checkboxPosition="start" (click)="toggleTryHarder()" [selected]="tryHarder">
